--- a/assignment/assignment9/style.css
+++ b/assignment/assignment9/style.css
@@ -9,7 +9,7 @@ body {
     max-width: 800px;
     height: 350px;
     position: relative;
-    /* overflow: hidden; */
+    overflow: hidden;
   }
   
   .slide {
@@ -18,7 +18,6 @@ body {
     height: 350px;
     position: absolute;
     transition: all 0.5s;
-    display: none;
   }
   
   .slide img {
@@ -58,3 +57,17 @@ body {
     display: block !important;
   }
   
+  #dots{
+    max-width: 100%;
+    position: absolute;
+    bottom: 10px;
+    display: flex;
+    box-sizing: border-box;
+    margin: auto 40%;
+    padding: auto;
+    overflow: hidden;
+  }
+
+  .dotactive{
+    background-color: green !important; 
+  }
