--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
   
   table{
 	width: 100%;
-	background-color: rgb(0, 102, 255);
+	background-color: rgb(200, 236, 0);
   }
 th, td {
 	border: 3px solid rgb(255, 255, 255);
@@ -53,7 +53,7 @@ a:link, a:visited {
 	left: 0;
 	bottom: 0;
 	width: 100%;
-	background-color: rgb(0, 102, 255);
+	background-color: cyan;
 	color: white;
 	text-align: center;
   }
