--- a/style.css
+++ b/style.css
@@ -1,44 +1,36 @@
-
-  
-
-th, td {
-	border: 3px solid rgb(255, 255, 255);
-	font-size: large;
-	padding: 5px;
-  }
-
-
-
+th,
 td {
-overflow: hidden;
+  border: 3px solid rgb(255, 255, 255);
+  font-size: large;
+  padding: 5px;
 }
 
-a:link, a:visited {
-	background-color: white;
-	color: black;
-	border: 2px solid green;
-	padding: 10px 20px;
-	text-align: center;
-	text-decoration: none;
-	display: inline-block;
-  }
-  
-  a:hover, a:active {
-	background-color: green;
-	color: white;
-  }
+td {
+  overflow: hidden;
+}
 
+a:link,
+a:visited {
+  background-color: white;
+  color: black;
+  border: 2px solid green;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
 
-  /* sticky footer css */
+a:hover,
+a:active {
+  background-color: green;
+  color: white;
+}
 
+/* sticky footer css */
 
-
-  footer {
-	left: 0;
-	bottom: 0;
-	width: 100%;
-	text-align: center;
-  }
-  
-
-
+footer {
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+}
